# LuminAIR

./: .all-contributorsrc  .gitignore  Cargo.toml  README.md  build.rs  compile_all_cairo.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: benchmark.yaml  benchmark.yml  rust.yml  test.yaml
backends/cairo/: Cargo.toml  build.rs
backends/cairo/cairo_lib/src/ops/: binary.cairo
backends/cairo/circuits/compiled_ops/: log2.sierra.json  mul.sierra.json  rem.sierra.json  sin.sierra.json
backends/cairo/circuits/projects/add/: Scarb.toml
backends/cairo/circuits/projects/exp2/: Scarb.toml
backends/cairo/circuits/projects/max_reduce/src/: lib.cairo
backends/cairo/circuits/projects/mul/: Scarb.toml
backends/cairo/circuits/projects/mul/src/: lib.cairo
backends/cairo/circuits/projects/recip/: Scarb.toml
backends/cairo/circuits/projects/rem/src/: lib.cairo
backends/cairo/circuits/projects/sin/: Scarb.toml
backends/cairo/circuits/projects/sum_reduce/: Scarb.toml
backends/cairo/circuits/projects/sum_reduce/src/: lib.cairo
backends/cairo/src/: constants.rs  lib.rs  prim.rs
backends/cairo/src/precomputing/: binary.rs  helpers.rs
backends/cairo/src/tests/: ops.rs
backends/stwo/: Cargo.toml
backends/stwo/benches/: tensor_ops.rs
backends/stwo/src/: lib.rs
backends/stwo/src/air/: mod.rs  tensor.rs
backends/stwo/src/air/add/: mod.rs  trace.rs
backends/stwo/src/circuits/: add.rs  mod.rs
backends/stwo/src/circuits/add/: component.rs  mod.rs  prover.rs  trace.rs
backends/stwo/src/compiler/: data.rs  mod.rs  prim.rs
backends/stwo/src/compilers/: prim.rs
cairo/compiled_ops/: add.sierra.json  exp2.sierra.json  lt.sierra.json  max_reduce.sierra.json  recip.sierra.json  sqrt.sierra.json  sum_reduce.sierra.json
cairo/luminair_cairo_lib/: Scarb.toml
cairo/luminair_cairo_lib/src/: lib.cairo  ops.cairo
cairo/luminair_cairo_lib/src/ops/: binary.cairo  reduce.cairo  unary.cairo
cairo/ops/add/: Scarb.toml
cairo/ops/add/src/: lib.cairo
cairo/ops/exp2/: Scarb.toml
cairo/ops/exp2/src/: lib.cairo
cairo/ops/log2/: Scarb.toml
cairo/ops/log2/src/: lib.cairo
cairo/ops/lt/: Scarb.toml
cairo/ops/lt/src/: lib.cairo
cairo/ops/max_reduce/: Scarb.toml
cairo/ops/mul/: Scarb.toml
cairo/ops/recip/: Scarb.toml
cairo/ops/recip/src/: lib.cairo
cairo/ops/rem/: Scarb.toml
cairo/ops/sin/: Scarb.toml
cairo/ops/sqrt/: Scarb.toml
cairo/ops/sqrt/src/: lib.cairo
cairo/ops/sum_reduce/: Scarb.toml
crates/air/: Cargo.toml
crates/air/benches/: tensor_ops.rs
crates/air/src/: gen.rs  lib.rs  pie.rs  prover.rs  serde.rs  tensor.rs  utils.rs
crates/air/src/add/: mod.rs  trace.rs
crates/air/src/backend/: mod.rs
crates/air/src/backend/simd/add/: mod.rs  trace.rs
crates/air/src/components/: mod.rs
crates/air/src/components/add/: component.rs  components.rs  mod.rs  table.rs  trace.rs
crates/air/src/components/log2/: component.rs  mod.rs  table.rs  tests.rs
crates/air/src/components/max_reduce/: component.rs  mod.rs  table.rs
crates/air/src/components/mul/: component.rs  mod.rs  table.rs
crates/air/src/components/recip/: component.rs  table.rs
crates/air/src/components/sum_reduce/: component.rs  table.rs
crates/air/src/ops/: mod.rs
crates/air/src/ops/add/: mod.rs
crates/air/src/ops/add/simd/: mod.rs  trace.rs
crates/air/src/ops/mul/: mod.rs
crates/air/src/ops/mul/simd/: mod.rs  trace.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: data.rs  fixed_point.rs  graph.rs  lib.rs  prim.rs  utils.rs
crates/compiler/src/op/: mod.rs  prim.rs
crates/compiler/src/tests/: mod.rs  ops.rs
crates/graph/: Cargo.toml
crates/graph/benches/: ops.rs
crates/graph/src/: data.rs  graph.rs  lib.rs  utils.rs
crates/graph/src/op/: mod.rs  other.rs  prim.rs
crates/graph/src/tests/: mod.rs  ops.rs
crates/numerair/: Cargo.toml
crates/numerair/src/: felt_utils.rs  fixed_points.rs  lib.rs
docs/: README.md  behind-the-scenes.mdx  concepts.mdx  contribute.mdx  docs.json  introduction.mdx  mint.json  quick-start.mdx  quickstart.mdx  roadmap.mdx  welcome.mdx  zkvm-compilers.mdx
docs/concepts/: compilers.mdx  graph-tensor.mdx  integrity.mdx  operators.mdx  prove-verify.mdx  shape-tracking.mdx
docs/contribute/: add-ops.mdx  guidelines.mdx
docs/more/: benchmarks.mdx  contribute.mdx  roadmap.mdx
docs/snippets/: benchmark-component.mdx
examples/cairo/linear_regression/: Cargo.toml
examples/cairo/linear_regression/src/: README.md  main.rs
examples/cairo/simple/: Cargo.toml
examples/cairo/simple/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: cairo_runner.rs  constants.rs  lib.rs  precomputing.rs  prim.rs  serialization.rs
src/precomputing/: binary.rs  helpers.rs  mod.rs
src/tests/: mod.rs  ops.rs
zkVMs/cairo/: Cargo.toml  compile_all_circuits.sh
zkVMs/cairo/circuits/compiled_ops/: add.sierra.json
zkVMs/cairo/circuits/projects/log2/: Scarb.toml
zkVMs/cairo/circuits/projects/lt/: Scarb.toml
zkVMs/cairo/circuits/projects/max_reduce/: Scarb.toml
zkVMs/cairo/circuits/projects/rem/: Scarb.toml
zkVMs/cairo/circuits/projects/sin/src/: lib.cairo
zkVMs/cairo/circuits/projects/sqrt/: Scarb.toml
zkVMs/cairo/src/: cairo_runner.rs
