[workspace]
resolver = "2"
members = [
    "crates/compiler",
    # "examples/simple"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/raphaelDkhn/Luminair"
license = "MIT"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", rev = "36b17ac" }
luminal = { git = "https://github.com/raphaelDkhn/luminal.git", rev = "0309ea4" }
numerair = { git = "https://github.com/gizatechxyz/NumerAir.git", rev = "3d9a9b9" }
rayon = "1.10.0"
