[workspace]
resolver = "2"
members = ["crates/air", "crates/graph", "examples/simple"]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/raphaelDkhn/Luminair"
license = "MIT"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", rev = "8902113" }
luminal = { git = "https://github.com/raphaelDkhn/luminal.git", rev = "80ae0fd" }
numerair = { git = "https://github.com/gizatechxyz/NumerAir.git", rev = "9e6d422" }

rayon = "1.10.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0"
num-traits = "0.2.17"
