[package]
name = "luminair_cairo"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
luminal.workspace = true
luminal_cpu.workspace = true
luminal_nn.workspace = true
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "0d86936", features = [
    "std",
    "cairo-1-hints",
] }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm", rev = "0d86936" }
cairo-lang-sierra = { version = "2.9.0-dev.0", default-features = false }
thiserror = "1.0.63"
itertools = "0.12.1"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
tracing = "0.1.40"
num-bigint = "0.4"
num-traits = "0.2.19"
serde_json = "1.0.120"
lazy_static = "1.5.0"
rustc-hash = "1.1.0"

[dev-dependencies]
paste = "1.0.15"
rand = "0.8.5"
dfdx = { version = "0.13" }
candle-core = "0.5.0"
ctor = "0.2.8"

[build-dependencies]
walkdir = "2.3.3"
