[package]
name = "stwo"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", rev = "36b17ac" }
itertools = "0.12.0"
num-traits = "0.2.17"
rayon = "1.10.0"
parking_lot = "0.12.3"
luminal.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tensor_ops"
harness = false
