[package]
name = "luminair_air"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
stwo-prover.workspace =true
itertools = "0.12.0"
num-traits = "0.2.17"
rayon.workspace = true
parking_lot = "0.12.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tensor_ops"
harness = false
