[package]
name = "luminair_air"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stwo-prover.workspace = true
luminal.workspace = true
tracing.workspace = true
numerair.workspace = true
serde.workspace = true
thiserror.workspace = true
num-traits.workspace = true
itertools = "0.12.0"
