[package]
name = "compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
stwo-prover.workspace =true
luminal = { git = "https://github.com/raphaelDkhn/luminal.git", rev = "0309ea4" }
rayon.workspace = true
luminair_air = {path = "../air"}