[package]
name = "luminair_graph"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
stwo-prover.workspace = true
luminal.workspace = true
rayon.workspace = true
numerair.workspace = true
thiserror.workspace = true
num-traits.workspace = true
luminair_air = { path = "../air" }
itertools = "0.14.0"

[dev-dependencies]
luminal_cpu = { git = "https://github.com/raphaelDkhn/luminal.git", rev = "80ae0fd" }
paste = "1.0.15"
rand = "0.8.5"
candle-core = "0.5.0"
ctor = "0.2.8"
criterion = "0.5"
once_cell = "1.20.3"

[[bench]]
name = "ops"
harness = false
