[package]
name = "simple"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
luminair_cairo = {path="../../../zkVMs/cairo"}
luminal = { path = "/Users/raphaeldoukhan/Desktop/Giza/Frameworks/luminal" }
luminal_nn = { path = "/Users/raphaeldoukhan/Desktop/Giza/Frameworks/luminal/crates/luminal_nn" }
